force-app/main/default/objects/HTTP_Header__mdt.object
<CustomObject>
    <fields>
        <fullName>Integration_Point__c</fullName>
        <label>Integration Point</label>
        <referenceTo>Integration_Point__mdt</referenceTo>
        <relationshipLabel>HTTP Header Parameters</relationshipLabel>
        <relationshipName>HTTP_Header_Parameters</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Paramater_Value__c</fullName>
        <label>Paramater Value</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameter_Name__c</fullName>
        <label>Parameter Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>HTTP Header Parameter</label>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Integration_Point__c</columns>
        <columns>Paramater_Value__c</columns>
        <columns>Parameter_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>HTTP Header Parameters</pluralLabel>
</CustomObject>